--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-07  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* fr.po: Updated the French translation.
+
 2007-01-06  Benedikt Meurer <benny@xfce.org>
 
 	* POTFILES.in: Add new files here.
