--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-07  Benedikt Meurer <benny@xfce.org>
+
+	* libexo-0.3.pot, *.po: Merge new strings.
+	* de.po: Update german translations.
+
 2007-01-07  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* fr.po: Updated the French translation.
