2007-01-08  Benedikt Meurer <benny@xfce.org>
	* hu.po: Fix invalid control sequence.




(Old svn revision: 24305)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-08  Benedikt Meurer <benny@xfce.org>
+
+	* hu.po: Fix invalid control sequence.
+
 2007-01-08  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* fr.po: Updated the French translation.
