--- a/po/hu.po
+++ b/po/hu.po
@@ -1179,7 +1179,7 @@ msgstr "\"%s\" eszköz nincs a fájlrendszer eszköz táblában"
 #: ../exo-mount/exo-mount-hal.c:250
 #, c-format
 msgid "Given device \"%s\" is not a volume or drive"
-msgstr "\"\%s\" nem egy kötet vagy meghajtó"
+msgstr "\"%s\" nem egy kötet vagy meghajtó"
 
 #. TRANSLATORS: The user tried to eject a device although he's not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:564
