Basque translation update
(Old svn revision: 24307)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-08  Piarres Beobide <pi@beobide.net>
+
+        * eu.po: Updated Basque translation.
+
 2007-01-08  Benedikt Meurer <benny@xfce.org>
 
 	* hu.po: Fix invalid control sequence.
