--- a/po/eu.po
+++ b/po/eu.po
@@ -8,15 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.12rc2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-07 23:35+0100\n"
-"PO-Revision-Date: 2006-09-15 22:15+0200\n"
+"POT-Creation-Date: 2007-01-08 13:50+0100\n"
+"PO-Revision-Date: 2007-01-08 14:23+0100\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: librezale <librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"X-Generator: Pootle 0.10.1\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:138
 #: ../exo/exo-cell-renderer-icon.c:145
@@ -48,12 +48,12 @@ msgstr "Errenderizatzeko ikonoaren tamaina pixel-etan."
 #: ../exo-mount/exo-mount-fstab.c:177 ../exo-mount/exo-mount-fstab.c:203
 #, c-format
 msgid "Failed to open file \"%s\": %s"
-msgstr "Huts  \"%s\" fitxategia irekitzerakoan: %s"
+msgstr "Huts \"%s\" fitxategia irekitzerakoan: %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:832
 #, c-format
 msgid "Failed to read file \"%s\": %s"
-msgstr "Huts  \"%s\" fitxategia irakurtzerakoan: %s"
+msgstr "Huts \"%s\" fitxategia irakurtzerakoan: %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:873
 #, c-format
@@ -440,7 +440,7 @@ msgstr "\"%s\" URL-a ez da onartzen"
 #: ../exo/exo-url.c:401
 #, c-format
 msgid "Failed to open \"%s\"."
-msgstr "Huts  \"%s\" irekitzerakoan."
+msgstr "Huts \"%s\" irekitzerakoan."
 
 #: ../exo/exo-wrap-table.c:160
 msgid "Column spacing"
@@ -527,9 +527,8 @@ msgid ""
 "Written by Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 msgstr ""
-"Copyright (c) 2005-2006\n"
+"Copyright (c) %s\n"
 "        os-cillation e.K. All rights reserved.\n"
-"\n"
 "Benedikt Meurer-ek <benny@xfce.org> idatzia.\n"
 "\n"
 
@@ -722,9 +721,8 @@ msgstr "[FITXATEGI|KARPETA]"
 
 #: ../exo-desktop-item-edit/main.c:138 ../exo-mount/main.c:106
 #: ../exo-mount-notify/main.c:153
-#, fuzzy
 msgid "Failed to open display"
-msgstr "Huts pantaila irekitzerakoan: %s"
+msgstr "Huts pantaila irekitzerakoan"
 
 #: ../exo-desktop-item-edit/main.c:168
 msgid "No file/folder specified"
@@ -749,100 +747,100 @@ msgstr "Fitxategi izena hautatu"
 #: ../exo-desktop-item-edit/main.c:420
 #, c-format
 msgid "Failed to create \"%s\"."
-msgstr "Huts  \"%s\" sortzerakoan."
+msgstr "Huts \"%s\" sortzerakoan."
 
 #: ../exo-desktop-item-edit/main.c:420
 #, c-format
 msgid "Failed to save \"%s\"."
-msgstr "Huts  \"%s\" gordetzerakoan."
+msgstr "Huts \"%s\" gordetzerakoan."
 
 #: ../exo-hal/exo-hal.c:346
 #, c-format
 msgid "External %s Drive"
-msgstr ""
+msgstr "Kanpo %s Gailua"
 
 #: ../exo-hal/exo-hal.c:348
 #, c-format
 msgid "%s Drive"
-msgstr ""
+msgstr "%s Gailua"
 
 #: ../exo-hal/exo-hal.c:357
 msgid "External Floppy Drive"
-msgstr ""
+msgstr "Kanpo Diskete Gailua"
 
 #: ../exo-hal/exo-hal.c:359
 msgid "Floppy Drive"
-msgstr ""
+msgstr "Diskete Gailua"
 
 #: ../exo-hal/exo-hal.c:363
 msgid "Compact Flash Drive"
-msgstr ""
+msgstr "Compact Flash Gailua"
 
 #: ../exo-hal/exo-hal.c:367
 msgid "Memory Stick Drive"
-msgstr ""
+msgstr "Memory Stick Gailua"
 
 #: ../exo-hal/exo-hal.c:371
 msgid "Smart Media Drive"
-msgstr ""
+msgstr "Smart Media Gailua"
 
 #: ../exo-hal/exo-hal.c:375
 msgid "SD/MMC Drive"
-msgstr ""
+msgstr "SD/MMC Gailua"
 
 #: ../exo-hal/exo-hal.c:379
 msgid "Zip Drive"
-msgstr ""
+msgstr "Zip Gailua"
 
 #: ../exo-hal/exo-hal.c:383
 msgid "Jaz Drive"
-msgstr ""
+msgstr "Jaz Gailua"
 
 #: ../exo-hal/exo-hal.c:387
 msgid "Pen Drive"
-msgstr ""
+msgstr "Boligrafo Gailua"
 
 #. TRANSLATORS: This string requires special care as %s may be the empty string. Trailing/leading whitespace will be removed.
 #: ../exo-hal/exo-hal.c:396
 #, c-format
 msgid "%s Music Player"
-msgstr ""
+msgstr "%s Musika Erreproduktorea"
 
 #. TRANSLATORS: This string requires special care as %s may be the empty string. Trailing/leading whitespace will be removed.
 #: ../exo-hal/exo-hal.c:411
 #, c-format
 msgid "%s Digital Camera"
-msgstr ""
+msgstr "%s Kamara Digitala"
 
 #. last fallback to "Drive"
 #: ../exo-hal/exo-hal.c:434
 msgid "Drive"
-msgstr ""
+msgstr "Gailua"
 
 #: ../exo-hal/exo-hal.c:661
 #, c-format
 msgid "Blank %s Disc"
-msgstr ""
+msgstr "%s Disko Hutsa"
 
 #: ../exo-hal/exo-hal.c:663
 #, c-format
 msgid "%s Disc"
-msgstr ""
+msgstr "%s Diskoa"
 
 #. special case for pure audio disc
 #: ../exo-hal/exo-hal.c:668
 msgid "Audio CD"
-msgstr ""
+msgstr "Audio CD-a"
 
 #: ../exo-hal/exo-hal.c:704
 #, c-format
 msgid "%s Removable Volume"
-msgstr ""
+msgstr "%s Bolumen Aldagarria"
 
 #: ../exo-hal/exo-hal.c:706
 #, c-format
 msgid "%s Volume"
-msgstr ""
+msgstr "%s Bolumena"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:100
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:1
@@ -955,7 +953,7 @@ msgid ""
 "as default Web Browser for Xfce:"
 msgstr ""
 "Xfce-ren lehenetsiriko nabigatzaile bezala erabili\n"
-"nahi duzun aplikazioa zehaztu."
+"nahi duzun aplikazioa zehaztu:"
 
 #: ../exo-helper/exo-helper-chooser.c:543
 msgid ""
@@ -963,7 +961,7 @@ msgid ""
 "as default Mail Reader for Xfce:"
 msgstr ""
 "Xfce-ren lehenetsiriko posta bezero bezala erabili\n"
-"nahi duzun aplikazioa zehaztu."
+"nahi duzun aplikazioa zehaztu:"
 
 #: ../exo-helper/exo-helper-chooser.c:544
 msgid ""
@@ -971,7 +969,7 @@ msgid ""
 "as default Terminal Emulator for Xfce:"
 msgstr ""
 "Xfce-ren lehenetsiriko terminal emuladore bezala erabili\n"
-"nahi duzun aplikazioa zehaztu."
+"nahi duzun aplikazioa zehaztu:"
 
 #: ../exo-helper/exo-helper-chooser.c:610
 msgid "Browse the file system to choose a custom command."
@@ -1157,151 +1155,155 @@ msgstr "X Terminala"
 
 #: ../exo-mount/exo-mount-fstab.c:115
 msgid "Unknown error"
-msgstr ""
+msgstr "Errore ezezaguna"
 
 #. generate an appropriate error message
 #. tell the caller that no matching device was found
 #: ../exo-mount/exo-mount-fstab.c:242 ../exo-mount/exo-mount-hal.c:343
 #, c-format
 msgid "Device \"%s\" not found in file system device table"
-msgstr ""
+msgstr "\"%s\" Gailua ez da aurkitu sistema gailu taulan"
 
 #. definitely not a device that we're able to mount, eject or unmount
 #: ../exo-mount/exo-mount-hal.c:194 ../exo-mount/exo-mount-hal.c:250
 #, c-format
 msgid "Given device \"%s\" is not a volume or drive"
-msgstr ""
+msgstr "Emandako \"%s\" gailua ez da bolumen edo gailu bat"
 
 #. TRANSLATORS: The user tried to eject a device although he's not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:564
 #, c-format
 msgid "You are not privileged to eject the volume \"%s\""
-msgstr ""
+msgstr "Ez duzu \"%s\" bolumena ateratzeko eskubiderik"
 
 #. TRANSLATORS: An application is blocking a mounted volume from being ejected.
 #: ../exo-mount/exo-mount-hal.c:569
 #, c-format
 msgid "An application is preventing the volume \"%s\" from being ejected"
-msgstr ""
+msgstr "Aplikazio bat \"%s\" bolumena ateratzea ezintzen du"
 
 #. TRANSLATORS: User tried to mount a volume, but is not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:800
 #, c-format
 msgid "You are not privileged to mount the volume \"%s\""
-msgstr ""
+msgstr "Ez duzu \"%s\" bolumena muntatzeko baimenik"
 
 #: ../exo-mount/exo-mount-hal.c:815
 msgid ""
 "Blank discs cannot be mounted, use a CD recording application like Xfburn to "
 "record audio or data on the disc"
 msgstr ""
+"Diska hutsak ezin dira muntatu, Xfburn antzerako CD grabazio aplikazio bat "
+"erabili diskoan datuak edo audioa grabatzeko"
 
 #: ../exo-mount/exo-mount-hal.c:826
 msgid "Audio CDs cannot be mounted, use Xfmedia to play the audio tracks"
-msgstr ""
+msgstr "Audio CD-ak ezin dira muntatu, Xfmedia erabili pistak erreproduzitzeko"
 
 #. TRANSLATORS: User tried to unmount a volume, but is not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:911
 #, c-format
 msgid "You are not privileged to unmount the volume \"%s\""
-msgstr ""
+msgstr "Ez duzu \"%s\" bolumena desmuntatzeko baimenik"
 
 #. TRANSLATORS: An application is blocking a volume from being unmounted.
 #: ../exo-mount/exo-mount-hal.c:916
 #, c-format
 msgid "An application is preventing the volume \"%s\" from being unmounted"
-msgstr ""
+msgstr "Aplikazio bat \"%s\" bolumena desmuntatzea ezintzen du"
 
 #. TRANSLATORS: HAL can only unmount volumes that were mounted via HAL.
 #: ../exo-mount/exo-mount-hal.c:921
 #, c-format
 msgid "The volume \"%s\" was probably mounted manually on the command line"
-msgstr ""
+msgstr "\"%s\" bolumena ziurrenik komando lerroan eskuz muntatua izan zen"
 
 #: ../exo-mount/main.c:63
 msgid "Eject rather than mount"
-msgstr ""
+msgstr "Ebatzi muntatu beharrean"
 
 #: ../exo-mount/main.c:64
 msgid "Unmount rather than mount"
-msgstr ""
+msgstr "Desmuntatu muntatu beharrean"
 
 #: ../exo-mount/main.c:66
 msgid "Mount by HAL device UDI"
-msgstr ""
+msgstr "HAL gailu UDI-az muntatu"
 
 #: ../exo-mount/main.c:68
 msgid "Mount by HAL device UDI (not supported)"
-msgstr ""
+msgstr "HAL gailu UDI-az muntatu (ez da onartzen)"
 
 #: ../exo-mount/main.c:70
 msgid "Mount by device file"
-msgstr ""
+msgstr "Gailu fitxategiaz muntatu"
 
 #: ../exo-mount/main.c:71
 msgid "Don't show any dialogs"
-msgstr ""
+msgstr "Ez elkarrizketarik bistarazi"
 
 #. the caller must specify either a HAL UDI or a device file
 #: ../exo-mount/main.c:136
 msgid "Must specify HAL device UDI or device file"
-msgstr ""
+msgstr "HAL gailu UDI-a edo gailu fitxategia ezarri behar da"
 
 #. the caller must specify EITHER a HAL UDI or a device file
 #: ../exo-mount/main.c:144
 msgid "Must not specify both a HAL device UDI and a device file simultaneously"
-msgstr ""
+msgstr "Ezin dira HAL gailu UDI-a eta gailu fitxategia batera ezarri"
 
 #: ../exo-mount/main.c:152
 msgid ""
 "Cannot mount by HAL device UDI, because HAL support was disabled for this "
 "build"
 msgstr ""
+"Ezin da HAL gailu UDI-az muntatu HAL onarpena ezgaiturik baitdago eraikitze "
+"honetan"
 
 #. the caller must not specify both eject and unmount
 #: ../exo-mount/main.c:167
 msgid "Cannot eject and unmount simultaneously"
-msgstr ""
+msgstr "Ezin da batera desmuntatu eta ebatzi"
 
 #: ../exo-mount/main.c:319
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to eject \"%s\""
-msgstr "Huts  \"%s\" sortzerakoan."
+msgstr "Huts \"%s\" ebazterakoan"
 
 #: ../exo-mount/main.c:321
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to unmount \"%s\""
-msgstr "Huts  \"%s\" irekitzerakoan."
+msgstr "Huts \"%s\" desmuntatzerakoan"
 
 #: ../exo-mount/main.c:323
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to mount \"%s\""
-msgstr "Huts  \"%s\" irekitzerakoan."
+msgstr "Huts \"%s\" muntatzerakoan"
 
 #. tell the user that the device can be removed now
 #: ../exo-mount-notify/main.c:111
 #, c-format
 msgid "The device \"%s\" is now safe to remove."
-msgstr ""
+msgstr "\"%s\" gailua orain ziurtasunez atera daiteke."
 
 #: ../exo-mount-notify/main.c:112
 msgid "Device is now safe to remove"
-msgstr ""
+msgstr "Gailua orain ziurtasunez atera daiteke"
 
 #. read-only, just ejecting
 #: ../exo-mount-notify/main.c:224
 msgid "Ejecting device"
-msgstr ""
+msgstr "Gailua ebazten"
 
 #: ../exo-mount-notify/main.c:225
 #, c-format
 msgid "The device \"%s\" is being ejected. This may take some time."
-msgstr ""
+msgstr "\"%s\" gailua ebatzia izango da. Honek denbora bat hartu lezake."
 
 #. read-only, just unmounting
 #: ../exo-mount-notify/main.c:230
 msgid "Unmounting device"
-msgstr ""
+msgstr "Gailua desmuntatzen"
 
 #: ../exo-mount-notify/main.c:231
 #, c-format
@@ -1309,11 +1311,13 @@ msgid ""
 "The device \"%s\" is being unmounted by the system. Please do not remove the "
 "media or disconnect the drive."
 msgstr ""
+"\"%s\" gailua sistemak desmuntatua izango da. Mesedez ez gailua deskonektatu "
+"edo medioa atera."
 
 #. not read-only, writing back data
 #: ../exo-mount-notify/main.c:238
 msgid "Writing data to device"
-msgstr ""
+msgstr "Datuak gailuan idazten"
 
 #: ../exo-mount-notify/main.c:239
 #, c-format
@@ -1321,6 +1325,8 @@ msgid ""
 "There is data that needs to be written to the device \"%s\" before it can be "
 "removed. Please do not remove the media or disconnect the drive."
 msgstr ""
+"Atera haurretik \"%s\" gailuan idatzi behar diren datuak daude. Mesedez ez "
+"medioa atera edo gailua deskonektatu."
 
 #: ../exo-open/main.c:59
 msgid "Usage: exo-open [URLs...]"
@@ -1405,6 +1411,19 @@ msgstr "Huts \"%s\" ataleko hobetsiriko aplikazioa irekitzerakoan."
 #, c-format
 msgid "Failed to open URL \"%s\"."
 msgstr "Huts \"%s\" URL-a irekitzerakoan."
+
+#~ msgid ""
+#~ "Copyright (c) 2005-2006\n"
+#~ "        os-cillation e.K. All rights reserved.\n"
+#~ "\n"
+#~ "Written by Benedikt Meurer <benny@xfce.org>.\n"
+#~ "\n"
+#~ msgstr ""
+#~ "Copyright (c) 2005-2006\n"
+#~ "        os-cillation e.K. All rights reserved.\n"
+#~ "\n"
+#~ "Written by Benedikt Meurer <benny@xfce.org>.\n"
+#~ "\n"
 
 #~ msgid "Failed to open display: %s"
 #~ msgstr "Huts pantaila irekitzerakoan: %s"
