--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,11 @@
+2007-01-09  Benedikt Meurer <benny@xfce.org>
+
+	* libexo-0.3.pot, *.po: Merge new strings.
+	* de.po: Update german translations.
+
 2007-01-08  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Updated Basque translation.
+	* eu.po: Updated Basque translation.
 
 2007-01-08  Benedikt Meurer <benny@xfce.org>
 
