Updated the French translation for the Libexo package
(Old svn revision: 24340)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-10  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* fr.po: Updated the French translation.
+
 2007-01-09  Benedikt Meurer <benny@xfce.org>
 
 	* libexo-0.3.pot, *.po: Merge new strings.
