Basque translation update
(Old svn revision: 24343)

--- a/po/eu.po
+++ b/po/eu.po
@@ -1263,7 +1263,7 @@ msgstr ""
 #: ../exo-mount/main.c:161
 #, c-format
 msgid "The specified UDI \"%s\" is not a valid HAL device UDI"
-msgstr ""
+msgstr "Emandako \"%s\" UDI-a ez da baliozko HAL gailu UDI bat"
 
 #. the caller must not specify both eject and unmount
 #: ../exo-mount/main.c:178
