--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
+2007-01-10  Benedikt Meurer <benny@xfce.org>
+
+	* POTFILES.in: Add new files here.
+
 2007-01-10  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Updated Basque translation.
+	* eu.po: Updated Basque translation.
 
 2007-01-10  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
