--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-11	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-mount-point.c(exo_mount_point_list_match_configured): Fix
+	  Linux build error.
+
 2007-01-10	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-md5.c(exo_md5_digest_dup): Fix invalid usage of g_memdup().
