2007-01-11  Jean-François Wauthy <pollux@xfce.org>
        * be.po, LINGUAS: Add Belarusian translations by Alexander Nyakhaychyk
        <nyakhaychyk@gmail.com>


(Old svn revision: 24359)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-11  Jean-François Wauthy <pollux@xfce.org>
+
+	* be.po, LINGUAS: Add Belarusian translations by Alexander Nyakhaychyk
+	<nyakhaychyk@gmail.com>
+
 2007-01-11  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
 	* fi.po: Updated Finnish translation.
