Updated the Polish translation by Piotr Malinski for a few core packages
(Old svn revision: 24362)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-11  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* pl.po: Updated the Polish translation by
+	Piotr Maliński <admin@rk.edu.pl>
+
 2007-01-11  Jean-François Wauthy <pollux@xfce.org>
 
 	* be.po, LINGUAS: Add Belarusian translations by Alexander Nyakhaychyk
