Updated the Czech translation by Michal Várady for the libexo and xarchiver packages. Added new squeeze Czech translation
(Old svn revision: 24364)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,10 @@
 2007-01-11  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
+	* cs.po: Updated the Czech translation by
+	Michal Várady <miko.vaji@gmail.com>
+
+2007-01-11  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
 	* pl.po: Updated the Polish translation by
 	Piotr Maliński <admin@rk.edu.pl>
 
