Updated the French translations for the libexo and thunar packages
(Old svn revision: 24372)

--- a/po/fr.po
+++ b/po/fr.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.13svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-09 23:46+0100\n"
-"PO-Revision-Date: 2007-01-10 00:27+0100\n"
+"PO-Revision-Date: 2007-01-12 14:24+0100\n"
 "Last-Translator: Maximilian Schleiss <maxschleiss@bluewin.ch>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -499,7 +499,7 @@ msgstr "  -h, --help        Afficher ce message d'aide et quitter\n"
 
 #: ../exo-csource/main.c:234
 msgid "  -v, --version     Print version information and exit\n"
-msgstr "  -v, --version     Afficher les informations de version et quitter\n"
+msgstr "  -v, --version     Afficher la version et quitter\n"
 
 #: ../exo-csource/main.c:235
 msgid "  --extern          Generate extern symbols\n"
@@ -562,7 +562,7 @@ msgstr ""
 #: ../exo-open/main.c:137
 #, c-format
 msgid "Please report bugs to <%s>.\n"
-msgstr "S'il vous plaît, reportez tout bogue à <%s>.\n"
+msgstr "Veuillez envoyer vos rapports de bogues à <%s>.\n"
 
 #. allocate the file chooser
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:290
