--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-12  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* fr.po: Updated the French translation.
+
 2007-01-11  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* cs.po: Updated the Czech translation by
