--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-14  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* it.po: Updated the Italian translation by
+	Dario <dariolinux@tiscali.it>
+
 2007-01-14  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
 	* ca.po: Updated Catalan translations
